--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -119,6 +119,23 @@
   margin-left: 3px;
 }
 
+.quantity-input{
+  width: 30px;
+}
+
+.quantity-input,
+.save-quantity-link{
+  display: none;
+}
+
+.update-error-message{
+  /* display: none; */
+  font-size: 10px;
+  color: red;
+  position: relative;
+  left: 5%;
+}
+
 @media (max-width: 1000px) {
   .delivery-options {
     /* grid-column: 1 means this element will be placed
@@ -207,4 +224,13 @@
 
   margin-top: 11px;
   margin-bottom: 15px;
+}
+
+.is-editing-quantity .quantity-input,
+.is-editing-quantity .save-quantity-link{
+  display: initial;
+}
+
+.is-editing-quantity .update-quantity-link{
+  display: none;
 }
